objects/Widget_Template__c.object
<CustomObject>
    <fields>
        <fullName>WBBackgroundColor__c</fullName>
        <label>WB_BackgroundColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBColor__c</fullName>
        <label>WB_Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBFontFamily__c</fullName>
        <label>WB_FontFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBFontSize__c</fullName>
        <label>WB_Font_Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBFontWeight__c</fullName>
        <label>WB_FontWeight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBFont_Size__c</fullName>
        <label>WBFont_Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBHeight__c</fullName>
        <label>WB_Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBLHoverColor__c</fullName>
        <label>WB_LHoverColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBLinkColor__c</fullName>
        <label>WB_LinkColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBLinkFontStyle__c</fullName>
        <label>WB_LinkFont_Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBLinkFontWeight__c</fullName>
        <label>WB_LinkFont_Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBLinkHoverTextDecoration__c</fullName>
        <label>WB_LinkHover_Text_Decoration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBPadding__c</fullName>
        <label>WB_Padding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBTextAlign__c</fullName>
        <label>WB_TextAlign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHBackgroundColor__c</fullName>
        <label>WH_BackgroundColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHBorderColor__c</fullName>
        <label>WH_BorderColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHBorderStyle__c</fullName>
        <label>WH_BorderStyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHBorderWidth__c</fullName>
        <label>WH_BorderWidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHColor__c</fullName>
        <label>WH_Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHFontFamily__c</fullName>
        <label>WH_FontFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHFontSize__c</fullName>
        <defaultValue>&quot;14px&quot;</defaultValue>
        <label>WH_Font_Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHFontWeight__c</fullName>
        <label>WH_FontWeight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHHeight__c</fullName>
        <label>WH_Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHPadding__c</fullName>
        <label>WH_Padding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHTextAlign__c</fullName>
        <label>WH_TextAlign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIBackgroundColor__c</fullName>
        <label>WI_BackgroundColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIColor__c</fullName>
        <label>WI_Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIFontFamily__c</fullName>
        <label>WI_FontFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIFontWeight__c</fullName>
        <label>WI_FontWeight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIHeight__c</fullName>
        <label>WI_Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WITextAlign__c</fullName>
        <label>WI_TextAlign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOBorderColor__c</fullName>
        <label>WO_BorderColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOBorderRadius__c</fullName>
        <label>WO_BorderRadius</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOBorderStyle__c</fullName>
        <label>WO_BorderStyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOBorderWidth__c</fullName>
        <label>WO_BorderWidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Widget Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Widget Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widget Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>